--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -19,6 +19,7 @@
   "menu": {
     "app": "Accueil",
     "wt": "Gestion billet",
+    "gestion-billet": "Gestion billet",
     "piaf": "Piaf",
     "dashboards": "Dashboards",
     "second-menu": "Second Menu",
