--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -20,6 +20,7 @@
     "app": "Accueil",
     "wt": "Gestion billet",
     "gestion-billet": "Gestion billet",
+    "gestion-client": "Gestion Clients",
     "piaf": "Piaf",
     "dashboards": "Dashboards",
     "second-menu": "Second Menu",
