--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -21,6 +21,7 @@
     "wt": "Gestion billet",
     "gestion-billet": "Gestion billet",
     "gestion-client": "Gestion Clients",
+    "gestion-autre": "Gestion Autre",
     "piaf": "Piaf",
     "dashboards": "Dashboards",
     "second-menu": "Second Menu",
